--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -227,7 +227,7 @@ hr {
     .home {
         display: flex;
         flex-direction: column;
-        padding: 10px;
+        padding: 100px 10px;
     }
 
     .home__content {
